# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Note: there are altogether 3 types of dependencies listed in this file:
#
#  [build-system].requires: the packages needed for the build system. This list
#  is not stored in the package metadata.
#
#  [project].dependencies: other packages are minimally needed to be able to
#  install and run qsimcirq. These are things like Cirq, NumPy, etc. Equivalent
#  to "install_requires" in setuptools' setup.py. The list gets stored in the
#  metadata of the package; when the project is installed by pip, this is the
#  specification that is used to install its dependencies.
#
#  [dependency-groups].dev: the development dependencies; i.e., what a
#  developer needs in order to run unit tests, linters, and formatters. The
#  "[dependency-groups]" section is a Python packaging feature introduced in
#  2025. This list is not stored in the metadata of the package. To install the
#  development dependencies, use "pip install --group dev".

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=78.1.1",
    "setuptools-scm[toml]>=6.2",
    "wheel",
]

[project]
name = "qsimcirq"
description = "High-performance quantum circuit simulator for C++ and Python."
authors = [
    { name = "The qsim/qsimh Developers", email = "qsim-qsimh-dev@googlegroups.com" }
]
maintainers = [
    { name = "Google Quantum AI", email = "quantum-oss-maintainers@google.com" }
]
readme = {file = "README.md", content-type = "text/markdown"}
license = "Apache-2.0"
requires-python = ">=3.10.0"
dynamic = ["version", "dependencies"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: GPU :: NVIDIA CUDA",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Quantum Computing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = [
    "algorithms",
    "cirq",
    "nisq",
    "quantum algorithm development",
    "quantum circuit simulator",
    "quantum computer simulator",
    "quantum computing",
    "quantum programming",
    "quantum simulation",
    "quantum",
    "schrödinger-feynman simulation",
    "simulation",
    "state vector simulator",
]

[project.urls]
documentation = "https://quantumai.google/qsim"
download = "https://pypi.org/project/qsimcirq/#files"
homepage = "https://quantumai.google/qsim"
issues = "https://github.com/quantumlib/qsim/issues"
source = "https://github.com/quantumlib/qsim"

[dependency-groups]
# Development dependencies. Install these with "pip install --group dev".
dev = [
    "black~=25.9.0",
    "cibuildwheel",
    # Distutils was removed from Python in 3.12.
    "setuptools; python_version >= 3.12",
    "flynt~=1.0",
    "isort[colors]~=6.0.1",
    "py-cpuinfo",
    "pylint~=4.0.2",
    "pytest",
    "pytest-xdist",
]

[tool.setuptools]
packages = ["qsimcirq"]
package-data = {"qsimcirq" = ["py.typed"]}

[tool.setuptools.dynamic]
# The next one becomes the value of [project].version.
version = {attr = "qsimcirq._version.__version__"}
# The next one becomes [project].dependencies, equivalent to "install_requires"
# in setuptools' setup.py. "pip install qsim" installs these automatically.
dependencies = {file = ["requirements.txt"] }

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
dependency-versions = "latest"
enable = ["cpython-prerelease"]
environment.PIP_PREFER_BINARY = "1"
# Due to package & module name conflict, temporarily move it away to run tests:
before-test = "pip install --group dev && mv {package}/qsimcirq /tmp"
test-command = """
pytest -s -v {package}/qsimcirq_tests/qsimcirq_test.py &&
mv /tmp/qsimcirq {package}
"""

[tool.cibuildwheel.macos]
before-build = """
brew install -q libomp llvm@19 &&
brew unlink libomp &&
brew unlink llvm@19 &&
brew link --force libomp &&
brew link --force llvm@19
"""
repair-wheel-command = """
delocate-listdeps {wheel} &&
delocate-wheel --verbose --require-archs {delocate_archs} -w {dest_dir} {wheel}
"""

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux2014"
manylinux-i686-image = "manylinux2014"
skip = "*musllinux*"

[tool.black]
target-version = ['py310', 'py311', 'py312', 'py313']
extend-exclude = 'third_party'
